added routing and blank pages

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,14 @@
   }
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
